fixed overflow issue on main cards

--- a/main.css
+++ b/main.css
@@ -1004,8 +1004,13 @@ footer p{
         top:20px;
     }
 
-    .what-happened-details, .what-happened-video-section{
+    /* .what-happened-details, .what-happened-video-section{
         height:100% !important;
+        display:block;
+    } */
+
+    .what-happened-video-section{
+        display:none !important;
     }
 
 }
@@ -1017,7 +1022,7 @@ footer p{
     } */
     .bp-card{
         width:100%;
-        overflow:none !important;
+        overflow:hidden !important;
         height:fit-content !important;
         max-height:fit-content !important;
         min-height:fit-content !important;
@@ -1035,6 +1040,10 @@ footer p{
     
     .bp-card-whathappened .bp-text{
         width:100% !important;
+    }
+
+    .update-notice{
+        width:100%;
     }
 
 }
